--- a/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.html
+++ b/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.html
@@ -82,7 +82,7 @@
     </div> 
     <div *ngIf="assetDetail?.artifactUrl && assetDetail?.mimeType === 'video/webm'">
         <p>
-            Video : <span (click)="navigateToplay()" class="pdfStyle">{{contentuploaded}}</span>
+            Video : <span (click)="navigateToView()" class="pdfStyle">{{contentuploaded}}</span>
             
         </p>
     </div>
