--- a/src/app/tenant/sunbirded/index.html
+++ b/src/app/tenant/sunbirded/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Teaching is better with a friend! Teach with Sunbird, the official MAA app for Sunbird’s school teachers.">
+    <meta name="description"
+        content="Teaching is better with a friend! Teach with Sunbird, the official MAA app for Sunbird’s school teachers.">
     <meta name="author" content="@HRDMinistry">
     <!-- changes -->
     <!-- Favicons -->
@@ -24,13 +25,15 @@
     <meta property="og:locale" content="en_gb" />
     <meta property="og:url" content="https://diksha.gov.in/Sunbird/" />
     <meta property="og:image" content="https://diksha.gov.in/Sunbird/images/preview.png" />
-    <meta property="og:description" content="Teaching is better with a friend! Teach with Sunbird, the official MAA app for Sunbird’s school teachers." />
+    <meta property="og:description"
+        content="Teaching is better with a friend! Teach with Sunbird, the official MAA app for Sunbird’s school teachers." />
 
     <!--Twitter Cards-->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://diksha.gov.in/Sunbird/">
     <meta name="twitter:title" content="Sunbird">
-    <meta name="twitter:description" content="Teaching is better with a friend! Teach with Sunbird, the official MAA app for Sunbird’s school teachers.">
+    <meta name="twitter:description"
+        content="Teaching is better with a friend! Teach with Sunbird, the official MAA app for Sunbird’s school teachers.">
     <meta name="twitter:site" content="@Sunbird">
     <meta name="twitter:creator" content="@Sunbird">
 
@@ -50,7 +53,8 @@
     <!-- Custom CSS -->
     <link href="css/custom.css" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
+        rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
         <script src="js/html5shiv.js"></script>
@@ -64,18 +68,19 @@
     <header class="bg-white" id="nav-bar">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
-							<span class="sr-only">Toggle navigation</span>
-							<i class="fa fa-bars fa-2x"></i>
-					</button>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu"
+                    aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <i class="fa fa-bars fa-2x"></i>
+                </button>
                 <span class="navbar-brand">
-						<h1 class="logo">
-						<a href="index.html" title="TEI">
-							<!-- <img src="images/diksha.png" alt="DIKSHA"> -->
-							<img src="images/appLogo.png" alt="SunbirdEd">
-						</a>
-					</h1>
-					</span>
+                    <h1 class="logo">
+                        <a href="index.html" title="TEI">
+                            <!-- <img src="images/diksha.png" alt="DIKSHA"> -->
+                            <img src="images/appLogo.png" alt="SunbirdEd">
+                        </a>
+                    </h1>
+                </span>
             </div>
 
             <nav class="navbar-collapse collapse menu navbar-right" id="menu" aria-expanded="true">
@@ -97,15 +102,20 @@
                 <div class="owl-carousel slideshow-carousel">
                     <!-- SlideShow Item-->
                     <div class="slide">
-                        <img alt="" title="" src="images/sunbird_content_image.jpg" />
+                        <img class="backgroundimg" alt="" title="" src="images/sunbird-bg.jpg" />
                         <div class="slide-cover">
-                            <div class="slide-details text-center text-black">
-                                <h2>WELCOME TO Sunbird<br/>
-                                    <strong>Sunbird In-service Teacher Resource App</strong></h2>
+                            <div class="slide-details text-center text-semibold">
+                                <h2>Digital Resources for Learning<br />
+                                    <div>
+                                        <button class="btn-default text-regular fixed-content">
+                                            <a href="index.html#about">About SunbirdEd</a>
+                                        </button>
+                                        <button class="btn-default text-regular fixed-content">
+                                            <a href="/sunbirded/explore-courses">Explore</a>
+                                        </button>
 
-                                <p class="slide-desc">Teaching is better with a friend! Teach with Sunbird, the official MAA app for Sunbird’s school teachers.</p>
+                                    </div>
                             </div>
-
                         </div>
                     </div>
                     <!-- /SlideShow Item-->
@@ -118,14 +128,27 @@
     <!-- Main Content -->
     <div class="container main-cont foo top-space text-gray hash-fix" id="about">
         <div class="row">
-            <div class="col-md-12">
-                <h2 class="text-brown">WELCOME TO Sunbird</h2>
-                <p><strong>Sunbird In-service Teacher Resource App</strong></p>
-                <p>Teaching is better with a friend! Teach with Sunbird, the official M.A.A app for Sunbird’s school teachers. Sunbird is a one stop solution for digital content aligned to curriculum of Grade 1 to Grade 10. It has resources for classroom
-                    teaching as well as self learning. All classroom teaching resources are made by tech savvy teachers of Sunbird and are available in the form of videos, interactive lessons, pdfs, audios and powerpoint presentations. Due to its simple
-                    design and layout, content in Sunbird can be easily used by students as well as parents along with teachers.</p>
-                <p>Sunbird also serves as a channel of communication between M.A.A and teachers. Latest Government Resolutions, notification for teachers are published in a separate News and Updates section. Through a Training Calendar, entire year's training
-                    schedule is made available to teachers. Soon, there will be online courses for teachers to hone their existing skills and acquire new ones. </p>
+                <div class="col-xs-6">
+						<img src="images/product-features.png">
+					</div>
+            <div class="col-xs-6">
+                <p>Education is not encumbered by age, date or region. Effecting change in education and learning is a
+                    crying need to develop and enable young people to achieve their full potential.</p>
+
+                <p>Sunbird is a searchable, discoverable repository of resources contributed by educators, engineers,
+                    pedagogues, teachers, learning scientists, data scientists and many others. Search the repository
+                    using keywords, look through the cards or browse the resource and collaborator lists to discover
+                    resources that help save time, money and effort.</p>
+
+                <p>The repository connects the expertise of people, organizations, domains, missions, and processes. The
+                    digital resources available in Sunbird are common building blocks that can be repurposed to suit
+                    specific use cases.</p>
+
+                <p>Sunbird is not only about using the resources offered. It is also about contributing back in whatever
+                    capacity to expand and extend it. It is about collectively building and nurturing an ecosystem that
+                    builds capacity for those focussed on finding learning solutions.</p>
+
+                <p>Join us and be a part of a community of social innovators steeped in the domain of learning.</p>
             </div>
         </div>
     </div>
