Sunbirded tenant related banner and navigation changes

--- a/src/app/tenant/sunbirded/css/custom.css
+++ b/src/app/tenant/sunbirded/css/custom.css
@@ -55,9 +55,9 @@ video{
     background: #fb4b00;
     color: #fff;
 	border: 1px solid #fb4b00;
-	margin-right: 16px;
-	padding: 4px;
-	font-size: 15px;
+	font-size: 12px;
+	height: 40px;
+	border-radius: 1px;
 }
 .btn-default:hover,
 .btn-default:focus {
@@ -96,14 +96,6 @@ a.no-underline:focus{
 a.white{
     color: #fff;
     border: 2px solid #fff;
-}
-a.white:hover,
-a.white:active,
-a.white:focus{
-	color: #333;
-    border: 2px solid #FBBC05;
-    background-color:#FBBC05;
-    text-shadow: none;
 }
 a.orange{
 	color: #333;
@@ -229,9 +221,6 @@ h1.logo img{
 	background:url(../images/header-bg.png) 0 0 no-repeat;
 	background-size: cover;
 }
-.top-space{
-	margin-top:20px;
-}
 .gray-scale{
     -webkit-filter: grayscale(50%);
     filter: grayscale(50%);
@@ -251,6 +240,185 @@ h1.logo img{
 	cursor:pointer;
 }
 
+/* banner style start */
+
+.section1 {
+	padding: 85px 0;
+	text-align: center;
+	color: #fff;
+	background-image: url("../images/sunbird-bg.jpg");
+	min-height: 427px;
+	/* Create the parallax scrolling effect */
+	background-attachment: fixed;
+	background-position: top center;
+	background-repeat: no-repeat;
+	background-size: cover;
+  }
+  .buttons{
+	  margin-top:65px;
+  }
+  .section1 .inner-content-heading {
+	font-size: 45px;
+  }
+  
+  .section1 .secondary-content {
+	margin: 20px 0;
+	font-size: 22px;
+  }
+  
+  .homepage-sidebar ul {
+	list-style: none;
+  }
+  
+  /* Main */
+  .inner__content .homepage-section {
+	display: block;
+	margin-bottom: 20px;
+	/*background-color: #fafafa;
+	border: 1px solid #f0f0f0;*/
+  }
+  .inner__content .homepage-section.premium {
+	border-color: #38c5e5;
+  }
+  .inner__content .homepage-section.premium .homepage-section__title {
+	color: #1cadce;
+  }
+  .inner__content .homepage-section.premium .premium-star {
+	max-height: 30px;
+  }
+  .inner__content .homepage-section:hover {
+	/*-webkit-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.3);
+		-moz-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.3);
+		box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.3);
+		  text-decoration:none;
+		  .homepage-section__title {
+			  color: #1cadce;
+		  }*/
+	font-weight: bold;
+	box-shadow: 0 0;
+  }
+  .inner__content .homepage-section .homepage-section__title {
+	/*color: #444444;
+		  font-size:30px;*/
+	transition: 0.2s color ease-in;
+	-webkit-transition: 0.2s color ease-in;
+  }
+  .inner__content .homepage-section .homepage-section__title i {
+	line-height: 25px;
+  }
+  .inner__content .homepage-section .homepage-section__content {
+	color: #444444;
+	font-size: 14px;
+	line-height: 1.6;
+  }
+  
+  .homepage.inner__content {
+	padding: 0;
+	margin-left: 0;
+	max-width: 100%;
+  }
+  .homepage.inner__content a {
+	font-weight: normal;
+  }
+  .homepage.inner__content .homepage-header {
+	background-color: #1d2a38;
+	padding: 30px;
+	background: #0d9474;
+	/* Old browsers */
+	background: -moz-linear-gradient(45deg, #0d9474 0%, #2a6fa8 100%);
+	/* FF3.6-15 */
+	background: -webkit-linear-gradient(45deg, #0d9474 0%, #2a6fa8 100%);
+	/* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(45deg, #0d9474 0%, #2a6fa8 100%);
+	/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0d9474', endColorstr='#2a6fa8',GradientType=1 );
+	/* IE6-9 fallback on horizontal gradient */
+  }
+  .homepage.inner__content .logo img {
+	padding-bottom: 10px;
+	padding-left: 30px;
+	max-width: 200px;
+  }
+  .homepage.inner__content .inner__searchbar {
+	position: relative;
+	top: 0;
+	margin: auto;
+	width: 100%;
+	max-width: 500px;
+	padding: 15px;
+  }
+  .homepage.inner__content .inner__searchbar h2 {
+	margin-bottom: 0;
+  }
+  .homepage.inner__content .inner__searchbar .search-icon {
+	position: absolute;
+	right: 26px;
+	top: 26px;
+  }
+  .homepage.inner__content .inner__searchbar .search-icon i {
+	font-size: 24px;
+  }
+  .homepage.inner__content .inner__searchbar .search-results {
+	position: absolute;
+	width: 100%;
+  }
+  .homepage.inner__content .inner__searchbar input {
+	font-size: 16px;
+	padding: 10px 15px;
+  }
+  .homepage.inner__content .inner__searchbar .search .search-results {
+	position: relative;
+	top: 4px;
+	left: 0;
+	transition: 0.2s max-height ease-in;
+	-webkit-transition: 0.2s max-height ease-in;
+  }
+  .homepage.inner__content
+	.inner__searchbar
+	.search
+	.search-results
+	.search-results__result:last-child {
+	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+	margin-bottom: 30px;
+  }
+  .homepage.inner__content .inner__blurb {
+	font-size: 16px;
+	line-height: 1.6;
+	padding: 15px 30px 15px 30px;
+	font-weight: lighter;
+	text-align: left;
+	color: #ffffff;
+	max-width: 500px;
+	margin: 0 auto;
+  }
+  .homepage.inner__content a.new-button,
+  .homepage.inner__content button.new-button {
+	background-color: #1cadce;
+	white-space: nowrap;
+	font-weight: bold;
+	font-size: 16px;
+	display: inline-block;
+	text-transform: uppercase;
+	padding: 15px 30px;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	color: #ffffff;
+	transition: background 250ms;
+	-webkit-transition: background 250ms;
+	cursor: pointer;
+  }
+  .homepage.inner__content a.new-button:hover,
+  .homepage.inner__content button.new-button:hover {
+	background-color: #38c5e5;
+	text-decoration: none;
+	color: #ffffff;
+  }
+  .homepage.inner__content .partner-logos {
+	padding: 40px 0;
+	background-color: #fafafa;
+  }
+  /* end */
 .owl-carousel .owl-item .quote-personImg img{
 	border-radius:50%;
 	width: 150px;
@@ -376,11 +544,24 @@ h1.logo img{
 .slide-actions{
 	text-transform:uppercase;
 }
+.text-semibold{
+	font-weight: 600;
+}
+a{
+	color: white;
+	font-weight: bold;	
+	font-size: medium;
+	padding: 8px 10px;
+}
+a:hover,a:focus{
+	color: white;
+}
 .slide-details a{
     line-height: 1;
-    font-size: 15px;
+	font-size: 15px;
+	padding: 9px;
     color:white;
-	display:inline-block;
+	display:block;
 }
 .slide-desc{
 	font-weight:100;
@@ -502,9 +683,7 @@ address{margin:0;}
 		font-size: 30px;
 	}
 	.slide-details a{
-		padding: 5px 10px;
-		margin:0 10px;
-		font-size: 18px;
+		font-size: 14px;
 	}
 	.slide-desc{
 		margin:10px 0;
@@ -521,9 +700,6 @@ address{margin:0;}
 @media only screen and (min-width: 992px){
 	.header-bg {
 		background-size:100%;
-	}
-	.top-space{
-		margin-top:40px;
 	}	
 	.slogan span{
 		font-size:18px;
