--- a/src/app/tenant/sunbirded/index.html
+++ b/src/app/tenant/sunbirded/index.html
@@ -85,7 +85,7 @@
 
             <nav class="navbar-collapse collapse menu navbar-right" id="menu" aria-expanded="true">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html#about" title="About"><span>About</span></a></li>
+                   <!--  <li><a href="index.html#about" title="About"><span>About</span></a></li> -->
                     <li><a href="/sunbirded/explore-courses" title="Contact"><span>Explore</span></a></li>
                     <li><a href="/learn" title="LOGIN"><span>Login</span></a></li>
                 </ul>
@@ -93,15 +93,37 @@
         </div>
     </header>
     <!-- /Header -->
-
-
+    <div class="homepage">
+    <section class="section1">
+            <div class="container">
+                <div class="inner-content text-center">
+                    <div class="inner-content-heading">
+                        <div class="text-semibold">Digital Resources for Learning</div>
+                    </div>
+                    <div class="row row-eq-height buttons">
+                        <div class="col-sm-6 col-md-4"></div>
+                        <div class="col-sm-6 col-md-2">
+                            <button class="btn-default text-regular fixed-content">
+                                <a href="https://www.sunbird.org" target="_blank">About Sunbird</a>
+                            </button>
+                        </div>
+                        <div class="col-sm-6 col-md-1">
+                            <button class="btn-default text-regular fixed-content" onclick="scrollToExploreDiv();">
+                                <a href="/sunbirded/explore-courses">Explore</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        </div>
     <!-- Slideshow -->
-    <div class="">
+    <!-- <div class="">
         <div class="container-fluid">
             <div class="row">
                 <div class="owl-carousel slideshow-carousel">
                     <!-- SlideShow Item-->
-                    <div class="slide">
+                    <!-- <div class="slide">
                         <img class="backgroundimg" alt="" title="" src="images/sunbird-bg.jpg" />
                         <div class="slide-cover">
                             <div class="slide-details text-center text-semibold">
@@ -117,17 +139,20 @@
                                     </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- /SlideShow Item-->
-                </div>
+                <!-- </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- /Slideshow -->
 
     <!-- Main Content -->
     <div class="container main-cont foo top-space text-gray hash-fix" id="about">
         <div class="row">
+            <div style="margin-bottom: 18px;" class="text-center">
+                <h1>About SunbirdEd</h1>
+            </div>
                 <div class="col-xs-6">
 						<img src="images/product-features.png">
 					</div>
