education tenant added and sunbirded tenant removed

--- a/src/app/client/src/app/app.component.html
+++ b/src/app/client/src/app/app.component.html
@@ -19,7 +19,7 @@
 </div>
 <app-sunbird-footer  *ngIf= "enableTenantHeader ==='sunbirdorg'"></app-sunbird-footer>
 <app-space-footer *ngIf= " enableTenantHeader ==='space'"></app-space-footer>
-<app-footer *ngIf= "enableTenantHeader !=='sunbirdorg' && enableTenantHeader !=='space' && (enableTenantHeader ==='sbwb' || enableTenantHeader === 'sunbirded' )"></app-footer>
+<app-footer *ngIf= "enableTenantHeader !=='sunbirdorg' && enableTenantHeader !=='space' && (enableTenantHeader ==='sbwb' || enableTenantHeader === 'education' )"></app-footer>
 
 
 <sui-modal [mustScroll]="false" [isClosable]="false" [transitionDuration]="0" [size]="'small'" class="sb-modal"
