--- a/src/app/tenant/education/index.html
+++ b/src/app/tenant/education/index.html
@@ -16,7 +16,7 @@
     <!-- <link rel="manifest" href="images/favicons/manifest.json"> -->
     <meta name="theme-color" content="#ffffff">
 
-    <title>SunbirdEd</title>
+    <title>Education</title>
 
     <!-- Og Tags -->
     <meta property="og:title" content="Sunbird" />
@@ -77,7 +77,7 @@
                     <h1 class="logo">
                         <a href="index.html" title="TEI">
                             <!-- <img src="images/diksha.png" alt="DIKSHA"> -->
-                            <img src="images/appLogo.png" alt="SunbirdEd">
+                            <img src="images/appLogo.png" alt="Education">
                         </a>
                     </h1>
                 </span>
@@ -86,7 +86,7 @@
             <nav class="navbar-collapse collapse menu navbar-right" id="menu" aria-expanded="true">
                 <ul class="nav navbar-nav">
                    <!--  <li><a href="index.html#about" title="About"><span>About</span></a></li> -->
-                    <li><a href="/sunbirded/explore-courses" title="Contact"><span>Explore</span></a></li>
+                    <li><a href="/education/explore-courses" title="Contact"><span>Explore</span></a></li>
                     <li><a href="/learn" title="LOGIN"><span>Login</span></a></li>
                 </ul>
             </nav>
@@ -109,7 +109,7 @@
                         </div>
                         <div class="col-sm-6 col-md-1">
                             <button class="btn-default text-regular fixed-content" onclick="scrollToExploreDiv();">
-                                <a href="/sunbirded/explore-courses">Explore</a>
+                                <a href="/education/explore-courses">Explore</a>
                             </button>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
     <div class="container main-cont foo top-space text-gray hash-fix" id="about">
         <div class="row">
             <div style="margin-bottom: 18px;" class="text-center">
-                <h1>About SunbirdEd</h1>
+                <h1>About Education</h1>
             </div>
                 <div class="col-xs-6">
 						<img src="images/product-features.png">
