static page heading changed from Education to Sunbird Education

--- a/src/app/tenant/education/index.html
+++ b/src/app/tenant/education/index.html
@@ -151,7 +151,7 @@
     <div class="container main-cont foo top-space text-gray hash-fix" id="about">
         <div class="row">
             <div style="margin-bottom: 18px;" class="text-center">
-                <h1>About Education</h1>
+                <h1>About Sunbird Education</h1>
             </div>
                 <div class="col-xs-6">
 						<img src="images/product-features.png">
