--- a/src/app/client/src/app/modules/myassets/components/asset-detail-page/asset-detail-page.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/asset-detail-page/asset-detail-page.component.scss
@@ -80,3 +80,11 @@
   cursor: pointer;
   color: #6e71c3
 }
+
+.keywords-list-section {
+  word-wrap:break-word;
+  margin-bottom: 1rem;
+  p.keyword-name {
+    display: inline;
+  }
+}
