--- a/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.scss
+++ b/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.scss
@@ -58,3 +58,10 @@
   cursor: pointer;
   color: #6e71c3
 }
+.keywords-list-section {
+  word-wrap:break-word;
+  margin-bottom: 1rem;
+  p.keyword-name {
+    display: inline;
+  }
+}
