--- a/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.html
+++ b/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.html
@@ -124,11 +124,10 @@
     </div>
     <div class="card-footer text-muted pt-30 pb-0">
       <p><span *ngIf="assetDetail?.version">Version : {{assetDetail?.version}}.0</span> <span
-          *ngIf="assetDetail?.creators">| Created By :
-          {{assetDetail?.creators}}</span>  <span *ngIf="assetDetail?.since"> | Created Year :
-          {{assetDetail?.year}} </span> <span *ngIf="assetDetail?.region"> | Country : {{assetDetail?.region}}</span>
-          <span *ngIf="assetDetail?.assetformat"> | Asset Format :
-              {{assetDetail?.assetformat }}</span> <span *ngIf="assetDetail?.licensetype"> | License Type :
+          *ngIf="assetDetail?.creators">&nbsp;| Created By :
+          {{assetDetail?.creators}}</span>  <span *ngIf="assetDetail?.since"> &nbsp;| Created Year :
+          {{assetDetail?.year}} </span> <span *ngIf="assetDetail?.region"> &nbsp;| Country : {{assetDetail?.region}} </span>
+           <span *ngIf="assetDetail?.licensetype"> &nbsp;| License Type :
                       {{assetDetail?.licensetype }}</span>
       </p>
       <p class="float-right"></p>
